# BusyCafe

./: .gitignore  .vercelignore  CONTRIBUTING.md  README.md  SECURITY.md  compose.yaml  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  database.py  geo.py  main.py  models.py  schemas.py  universal_contracts.py
backend/fixtures/: README.md  citydata_sample.json  citydata_sample.validation_error.txt  kakao_ce7_sample.json  kakao_ce7_sample.summary.json  living_population_minimal_cp949.csv  naver_local_official_docs_sample.json  purpose_od_sample_20260630.csv  se250m_spop_local_resd_sample.xml  seoul_refreshment_permits_sample.json  subway_osm_exits_sample.json  subway_osm_network_sample.json  subway_station_master_sample.json
backend/migrations/: README  env.py
backend/scripts/: analyze_ingest_slo.py  build_activity_artifact.py  build_curated_cafe_catalog.py  build_provider_cafe_catalog.py  build_purpose_od_centroids.py  build_purpose_od_shadow.py  build_subway_assets.py  cache_kakao_cafes.py  cache_refreshment_candidates.py  check_freshness.py  compact_living_population.py  configure_supabase_scheduler.py  download_hotspot_master.py  download_living_population.py  download_living_population_history.py  materialize_scores.py  prepare_eval_observations.py  probe_naver_local.py  probe_seoul_citydata.py  profile_refreshment_permits.py  report_capacity_match_coverage.py  report_catalog_gaps.py  report_kakao_catalog_expansion.py  report_permit_reconciliation.py  run_density_snapshot.py  run_eval.py  run_living_od_repeats.py  run_living_od_same_day.py  run_nowcast_backtest.py  run_purpose_od_stability.py  run_shadow_eval.py  run_shadow_snapshot.py  run_source_delay_backtest.py  seed_cafes.py  seed_curated_cafes.py  seed_hotspots.py  seed_kakao_catalog_expansion.py  seed_naver_place_links.py  seed_provider_cafes.py  select_eval_candidates.py  (+1 more)
backend/tests/: test_activity_shadow.py  test_api_routes.py  test_build_activity_artifact.py  test_build_provider_cafe_catalog_script.py  test_build_purpose_od_centroids.py  test_build_purpose_od_shadow.py  test_build_subway_assets.py  test_cache_kakao_cafes.py  test_cache_refreshment_candidates.py  test_capacity_shadow.py  (+68 more)
(+146 files in other folders)
