[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cafe-crowd-backend"
version = "0.1.0"
description = "Backend services for the cafe-crowd map"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

