[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cafe-crowd-backend"
version = "0.1.0"
description = "Backend services for the cafe-crowd map"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "apscheduler>=3.10,<4",
  "duckdb>=1.4,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "psycopg[binary]>=3.2,<4",
  "pyproj>=3.7,<4",
  "pyshp>=2.3,<3",
  "shapely>=2.0,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]
